laborations/old-2018-lab1/testsuite/bad/decl-fun-paren.cc
int fun((int foo = 4), int foo = 4);
